# comet-kvm-codex-plugin

./: .gitignore  .mcp.json  AGENTS.md  README.md  doppler.yaml  glkvm_mcp.py  pyproject.toml
.codex/: config.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  live-smoke.yml
.kilo/plans/: 1783477850934-doc-reframe-kvm-core-as-product.md
docs/: NORTHSTAR.md  NORTH_STAR.md  architecture.md  decisions.md  kvm-core.md  vlm-prompt-contract.md
docs/communication-audits/: 01-executive-summary.md  02-current-implementation-inventory.md  03-gap-analysis-and-next-pr.md  04-question-by-question-answers.md  README.md
docs/plans/: 01-vlm-mcp-integration-plan.md  02-mcp-v2-migration-evaluation.md  comet-kvm-codex-plugin.md
docs/reference/: comet-api.md  comet-hardware.md
docs/reference/glkvm-api/: README.md  http-endpoints.csv  project-endpoint-coverage.csv  sources.json  websocket-events.csv
docs/remediation/: R1-runtime-bugs.md  R11-tests.md  R2-dead-code.md  R3-crawl-planner.md  R4-state-machine.md  R5-trace-ledger.md  R6-adapters.md  R7-policy-matrix.md  R8-to-R16-minor-issues.md  README.md
docs/research/: README.md  glkvm-api-surface.md  glkvm-client-audit-2026-07-15.md  oob-proxmox-tailscale-vision.md
docs/workflows/: live-hardware-qualification.md
extras/: kvm_calibrate.py  kvm_click_helper.py
schemas/: bios-state.schema.json  capability.schema.json  trace-event.schema.json  transition.schema.json
scripts/: comet_preflight.py  comet_smoke_test.py  generate_glkvm_api_inventory.py  run_ledger.py
skills/comet-bios-triage/: SKILL.md
skills/comet-bios-triage/agents/: openai.yaml
skills/comet-bios-triage/evals/: trigger-cases.json
skills/comet-bios-triage/references/: bios-cartography.md  hwinfo-run-loop.md  msi-z690-bios-workflow.md  safety-policy.md  state-model.md  (+1 more)
skills/comet-kvm-operations/: SKILL.md
src/bios_sidecar/: __init__.py
src/kvm_core/: doppler_credentials.py  logging_config.py  ocr.py  runtime.py  server.py  tools.py  tools_admin.py  tools_core.py  tools_media.py
tests/: bios_test_helpers.py  local_services.py  test_api_corpus.py  test_bios_tools.py  test_capability_index.py  test_comet_protocol.py  test_crawl_safety.py  test_docs_consistency.py  test_doppler_credentials.py  test_glkvm_api_inventory.py  test_graph_transitions.py  test_hwinfo.py  test_logging_config.py  test_mcp_stdio.py  test_native_ocr.py  test_ocr.py  test_ocr_tools.py  test_policy_engine.py  test_recover_mutate.py  test_runtime_review_fixes.py  test_skill_packaging.py  test_smoke.py  test_state_identity.py  test_vlm_contract.py  test_vlm_routing.py
tests/live/: doppler_env.py  test_live_smoke.py
(+56 files in other folders)
