[project]
name = "comet-kvm-codex-plugin"
version = "0.1.0"
description = "Codex plugin fork of glkvm-mcp for GL.iNet Comet KVM and BIOS/HWiNFO workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Kenny Peh" }]
keywords = ["mcp", "glkvm", "pikvm", "kvm", "claude", "anthropic", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = [
    "mcp[cli]>=1.28,<2",
    "websockets>=12",
    "httpx>=0.27",
    "Pillow>=10",
    "pytesseract>=0.3.13",
    "instructor>=1.5",
    "litellm>=1.50",
]

[project.urls]
Homepage   = "https://github.com/Coldaine/comet-kvm-codex-plugin"
Issues     = "https://github.com/Coldaine/comet-kvm-codex-plugin/issues"
Source     = "https://github.com/Coldaine/comet-kvm-codex-plugin"
UpstreamGLKVMMCP = "https://github.com/kennypeh85/glkvm-mcp"
UpstreamGLKVM = "https://github.com/gl-inet/glkvm"

[dependency-groups]
dev = [
    "pytest>=8",
]
