[project]
name = "comet-kvm-codex-plugin"
version = "0.1.0"
description = "Codex plugin fork of glkvm-mcp for GL.iNet Comet KVM and BIOS/HWiNFO workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Kenny Peh" }]
keywords = ["mcp", "glkvm", "pikvm", "kvm", "claude", "anthropic", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = [
    # The server uses FastMCP's 1.x API. Keep this deliberate major boundary
    # until the MCP 2 migration is reviewed and tested.
    "mcp[cli]>=1.28,<2",
    "websockets>=16.1",
    "httpx>=0.28.1",
    "Pillow>=12.3.0",
    "pytesseract>=0.3.13",
]

[project.urls]
Homepage   = "https://github.com/Coldaine/comet-kvm-codex-plugin"
Issues     = "https://github.com/Coldaine/comet-kvm-codex-plugin/issues"
Source     = "https://github.com/Coldaine/comet-kvm-codex-plugin"
UpstreamGLKVMMCP = "https://github.com/kennypeh85/glkvm-mcp"
UpstreamGLKVM = "https://github.com/gl-inet/glkvm"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
